--- a/src/app/shared/components/app-navbar/app-navbar.html
+++ b/src/app/shared/components/app-navbar/app-navbar.html
@@ -67,7 +67,7 @@
       </button>
 
       <!-- Logo texto -->
-      <span class="mobile-brand">LittleHands</span>
+      <img src="horizontal_logo.png" alt="LittleHands Logo" class="mobile-brand" routerLink="/">
 
       <span class="mobile-spacer"></span>
 
