--- a/src/app/shared/components/app-navbar/app-navbar.css
+++ b/src/app/shared/components/app-navbar/app-navbar.css
@@ -146,7 +146,13 @@ html, body {
 }
 
 /* mobile header default hidden */
-.mobile-header { display: none; }
+.mobile-header {
+  display: none;
+}
+
+.mobile-header mat-toolbar {
+  background: white;
+}
 
 /* mobile menu container - SOLO visible cuando está abierto */
 .mobile-menu-container {
