--- a/src/app/features/about/about.html
+++ b/src/app/features/about/about.html
@@ -1,1 +1,37 @@
-<p>about works!</p>
+<div class="about-us-container">
+  <div class="about-image-column">
+    <img src="about-us.png" alt="Manos trabajando la madera con herramientas y virutas, representando el logo de Aserrín.">
+  </div>
+
+  <div class="about-content-column">
+    <h1>Aserrín</h1>
+    <h2>¡Aprende jugando!</h2>
+
+    <p>
+      Somos una empresa enfocada en brindar herramientas para que los padres puedan educar a sus hijos desde edad
+      temprana a través de juguetes y mobiliario infantil alineados a los métodos educativos de Maria Montessori,
+      Emmi Pikler, la pedagogía Waldorf y Reggio Emilia. Con ello promovemos el juego activo, libre y creativo,
+      especialmente en el desarrollo motor grueso y fino de tu peque.
+    </p>
+    <p>
+      Nuestros productos están adecuados a texturas y tamaño, para permitir que el aprendizaje de tu peque sea de
+      acuerdo a su ritmo, desarrollando su independencia, sus habilidades sensoriales y mediante el uso de juguetes
+      desestructurados aprende, jugando.
+    </p>
+    <p>
+      Cuidamos de cada detalle en nuestro proceso de fabricación, desde el diseño, la elección de los colores y
+      materiales, el cortado y acabado son revisados para darte la seguridad que tu peque necesita.
+    </p>
+    <p>
+      Nuestra calidad, seguridad, innovación y estética de nuestros productos nos han posicionado como punto de
+      referencia a nivel de Latinoamérica en el ámbito de mobiliario infantil y juguetería de madera.
+    </p>
+    <p class="supporting-text">
+      ¡Al comprarnos estás apoyando el trabajo de artesanos peruanos!
+    </p>
+    <p class="supporting-text">
+      Gracias por elegirnos y crecer juntos como familia ✨
+    </p>
+
+  </div>
+</div>
